log/build_2025-12-15_06-40-39/duckie_led_pkg/stdout_stderr.log
running egg_info
writing ../../build/duckie_led_pkg/duckie_led_pkg.egg-info/PKG-INFO
writing dependency_links to ../../build/duckie_led_pkg/duckie_led_pkg.egg-info/dependency_links.txt
writing entry points to ../../build/duckie_led_pkg/duckie_led_pkg.egg-info/entry_points.txt
writing requirements to ../../build/duckie_led_pkg/duckie_led_pkg.egg-info/requires.txt
writing top-level names to ../../build/duckie_led_pkg/duckie_led_pkg.egg-info/top_level.txt
reading manifest file '../../build/duckie_led_pkg/duckie_led_pkg.egg-info/SOURCES.txt'
writing manifest file '../../build/duckie_led_pkg/duckie_led_pkg.egg-info/SOURCES.txt'
running build
running build_py
copying duckie_led_pkg/led_service.py -> /home/ubuntu/ros2_ws/build/duckie_led_pkg/build/lib/duckie_led_pkg
running install
running install_lib
copying /home/ubuntu/ros2_ws/build/duckie_led_pkg/build/lib/duckie_led_pkg/led_service.py -> /home/ubuntu/ros2_ws/install/duckie_led_pkg/lib/python3.10/site-packages/duckie_led_pkg
byte-compiling /home/ubuntu/ros2_ws/install/duckie_led_pkg/lib/python3.10/site-packages/duckie_led_pkg/led_service.py to led_service.cpython-310.pyc
running install_data
  File "/home/ubuntu/ros2_ws/install/duckie_led_pkg/lib/python3.10/site-packages/duckie_led_pkg/led_service.py", line 19
    self.get_logger().info('Ready)
                           ^
SyntaxError: unterminated string literal (detected at line 19)

running install_egg_info
removing '/home/ubuntu/ros2_ws/install/duckie_led_pkg/lib/python3.10/site-packages/duckie_led_pkg-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/duckie_led_pkg/duckie_led_pkg.egg-info to /home/ubuntu/ros2_ws/install/duckie_led_pkg/lib/python3.10/site-packages/duckie_led_pkg-0.0.0-py3.10.egg-info
running install_scripts
Installing led_service script to /home/ubuntu/ros2_ws/install/duckie_led_pkg/lib/duckie_led_pkg
writing list of installed files to '/home/ubuntu/ros2_ws/build/duckie_led_pkg/install.log'
